Add /nodestate API
