# src/main.rs
@@ -45,7 +45,7 @@ use crate::routes::{
     get_asset_media, get_channel_id, get_payment, get_swap, init, invoice_status, issue_asset_cfa,
     issue_asset_nia, issue_asset_uda, keysend, list_assets, list_channels, list_payments,
     list_peers, list_swaps, list_transactions, list_transfers, list_unspents, ln_invoice, lock,
-    maker_execute, maker_init, network_info, node_info, open_channel, post_asset_media,
+    maker_execute, maker_init, network_info, node_info, node_state, open_channel, post_asset_media,
     refresh_transfers, restore, rgb_invoice, send_asset, send_btc, send_onion_message,
     send_payment, shutdown, sign_message, sync, taker, unlock,
 };
@@ -143,6 +143,7 @@ pub(crate) async fn app(args: LdkUserInfo) -> Result<(Router, Arc<AppState>), Ap
         .route("/makerinit", post(maker_init))
         .route("/networkinfo", get(network_info))
         .route("/nodeinfo", get(node_info))
+        .route("/nodestate", get(node_state))
         .route("/openchannel", post(open_channel))
         .route("/refreshtransfers", post(refresh_transfers))
         .route("/restore", post(restore))
