# src/routes.rs
@@ -3714,3 +3714,44 @@ pub(crate) async fn encode_asset_id(
     
     Ok(Json(EncodeAssetIdResponse { hex_format: payload.hex_format, asset_id }))
 }
+
+#[derive(Deserialize, Serialize)]
+pub(crate) enum NodeState {
+    None,
+    Locked,
+    Running,
+    Changing,
+}
+
+#[derive(Deserialize, Serialize)]
+pub(crate) struct NodeStateResponse {
+    pub(crate) state: NodeState,
+}
+
+pub(crate) async fn node_state(
+    State(state): State<Arc<AppState>>,
+) -> Result<Json<NodeStateResponse>, APIError> {
+
+    let mnemonic_path = get_mnemonic_path(&state.static_state.storage_dir_path);
+    if let Ok(_) = check_already_initialized(&mnemonic_path) {
+        return Ok(Json(NodeStateResponse {
+            state: NodeState::None,
+        }));    
+    }
+
+    if *state.get_changing_state() {
+        return Ok(Json(NodeStateResponse {
+            state: NodeState::Changing,
+        }));
+    }
+
+    if let Ok(_) = state.check_locked().await {
+        return Ok(Json(NodeStateResponse {
+            state: NodeState::Locked,
+        }));
+    }
+
+    return Ok(Json(NodeStateResponse {
+        state: NodeState::Running,
+    }));
+}
